Actions section added on home

--- a/src/pages/Home/template.pug
+++ b/src/pages/Home/template.pug
@@ -9,3 +9,12 @@
       router-link.hyperlink(to="lab") Quero fazer um orçamento
         font-awesome-icon.icon(icon="long-arrow-alt-right")
     .right
+
+  .actions
+    a.button.primary Nosso catálogo
+    a.button.secondary Quero um orçamento 
+    .newsletter
+      label.newsletter(for="newsletter") Quero receber novidades
+      .formGroup
+        input#newsletter.newsletter(type="email" placeholder="E-mail")
+        font-awesome-icon(icon="long-arrow-alt-right")
