--- a/src/pages/Home/style.sass
+++ b/src/pages/Home/style.sass
@@ -9,6 +9,7 @@ body
   padding: 0
   font-family: "Avenir"
   color: $black
+  background-color: $ice
 
 .home
   display: flex
@@ -70,4 +71,78 @@ body
       width: 100%
       +transition(.1s, ease-in-out)
 
-    
+  .actions
+    padding: 30px
+    display: flex
+    flex-direction: column
+
+    div.newsletter
+      width: 100%
+      display: flex
+      flex-direction: column
+      align-self: center
+
+      label.newsletter
+        margin-top: 40px
+        text-align: center
+        text-transform: uppercase
+        font-size: .9rem
+        font-weight: 600
+        letter-spacing: 1px
+        color: $gray
+
+      .formGroup
+        width: 100%
+        position: relative
+        display: flex
+        flex-direction: row
+        align-items: center
+        margin-top: 20px
+
+        svg
+          position: absolute
+          right: 10px
+          color: $gray
+
+input 
+  width: 100%
+  padding: 15px 20px
+  font-size: .9rem
+  border: none
+  border-radius: 5px
+  background-color: white
+  -webkit-box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.25)
+  -moz-box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.25)
+  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.25)
+
+input:focus
+  outline: none
+
+::placeholder
+  color: $gray
+
+a.button
+  width: 100%
+  padding: 15px 0
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: center
+  text-transform: uppercase
+  font-weight: 600
+  font-size: .9rem
+  letter-spacing: 1px
+  border-radius: 5px  
+  margin: 5px 0
+
+a.button.primary
+  background-color: $primaryColor
+  -webkit-box-shadow: 0px 2px 10px -2px rgba(255,197,0,0.75)
+  -moz-box-shadow: 0px 2px 10px -2px rgba(255,197,0,0.75)
+  box-shadow: 0px 2px 10px -2px rgba(255,197,0,0.75)
+a.button.secondary
+  background-color: $black
+  color: white
+  -webkit-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.75)
+  -moz-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.75)
+  box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.75)
